--- a/dashboard.html
+++ b/dashboard.html
@@ -19,6 +19,10 @@
             background-size: cover;
             background-position: center top;
             background-attachment: static;
+            
+        }
+        div{
+            border: 1px solid red;
         }
     
     </style>
